--- a/spring-context/spring-context.gradle
+++ b/spring-context/spring-context.gradle
@@ -47,3 +47,9 @@ dependencies {
 	testFixturesImplementation("com.google.code.findbugs:jsr305")
 	testFixturesImplementation("org.assertj:assertj-core")
 }
+tasks.withType(JavaCompile) {
+	options.encoding = "UTF-8"
+}
+tasks.withType(Javadoc) {
+	options.encoding = "UTF-8"
+}
